--- a/printer.cfg
+++ b/printer.cfg
@@ -130,103 +130,86 @@ enable_force_move: True
 default_type: echo
 
 [bed_mesh]
-speed: 450
+speed: 100
 horizontal_move_z: 8
-mesh_min: 40,40
-mesh_max: 260,260
+mesh_min: 5,5
+mesh_max: 180,210
 probe_count: 5
 algorithm: bicubic
 
-[probe]
-pin: !P1.25
-x_offset: -25
-y_offset: -18
-speed: 20.0
+#[probe]
+#pin: !P1.25
+#speed: 20.0
 
-[z_tilt]
-z_positions:
-  329,150
-  -29,150
-points:
-  32,150
-  175,150
-  293,150
-speed: 450
+[bltouch]
+sensor_pin: P0.10
+control_pin: P2.0
+x_offset: 38
+y_offset: 0
+z_offset: 0.65
+stow_on_each_sample: True
 
 [stepper_x]
 step_pin: P2.2
 dir_pin: P2.6
 enable_pin: !P2.1
-# step_distance: 0.025      # (4 calculated)
-step_distance: 0.0063     # (16 calculated)
-# step_distance: 0.0031       # (32 calculated)
-endstop_pin: !P1.29 
-position_endstop: -13
-position_min: -13
-position_max: 300
-homing_speed: 250
+step_distance: 0.0124     
+#endstop_pin: !P1.29 
+endstop_pin: tmc2209_stepper_x:virtual_endstop
+position_endstop: -2.7
+#position_min: -13
+position_max: 187
+homing_speed: 70
+homing_retract_dist: 0
 
 [tmc2209 stepper_x]
 uart_pin: P1.17
+diag_pin: P1.29
 microsteps: 16
 interpolate: True
 run_current: 1.27
 hold_current: 0.9
 # stealthchop_threshold: 183 # 275 RPM
 stealthchop_threshold: 60
+driver_SGTHRS: 125
 
 [stepper_y]
 step_pin: P0.19
 dir_pin: P0.20
 enable_pin: !P2.8
-# step_distance: 0.025      # (4 calculated)
-step_distance: 0.0063     # (16 calculated)
-# step_distance: 0.0031       # (32 calculated)
-endstop_pin: !P1.27 
-position_endstop: -5
-position_min: -5
-position_max: 300
-homing_speed: 250
+step_distance: 0.0124     
+#endstop_pin: !P1.28 
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+position_endstop: -0.7
+#position_min: -0.7
+position_max: 215
+homing_speed: 70
+homing_retract_dist: 0
 
 [tmc2209 stepper_y]
 uart_pin: P1.15
+diag_pin: P1.28
 microsteps: 16
 interpolate: True
 run_current: 1.27
 hold_current: 0.9
 # stealthchop_threshold: 183 # 275 RPM
 stealthchop_threshold: 60
+driver_SGTHRS: 125
 
 [stepper_z]
 step_pin: P0.22
 dir_pin: P2.11
 enable_pin: !P0.21
-# step_distance: .01     # 4 (calculated) 
-step_distance: .0025     # 16 (calculated)
+step_distance: .00125     
 endstop_pin: probe:z_virtual_endstop
 position_min: -3
-position_max: 400
+position_max: 180
 homing_speed: 30
  
 [tmc2209 stepper_z]
 uart_pin: P1.10
-microsteps: 16
-interpolate: True
-run_current: 1.27
-hold_current: 0.9
-# stealthchop_threshold: 183 # 275 RPM
-stealthchop_threshold: 60
-
-[stepper_z1]
-step_pin: P0.1
-dir_pin: !P0.0
-enable_pin: !P0.10
-# step_distance: .01     # 4 (calculated) 
-step_distance: .0025     # 16 (calculated)
- 
-[tmc2209 stepper_z1]
-uart_pin: P1.1
-microsteps: 16
+microsteps: 32
 interpolate: True
 run_current: 1.27
 hold_current: 0.9
@@ -234,19 +217,10 @@ hold_current: 0.9
 stealthchop_threshold: 60
 
 [safe_z_home]
-home_xy_position: 160,160
+home_xy_position: 100,100
 speed: 700
 z_hop: 10
 z_hop_speed: 100
-
-# thermistor values taken from https://www.sliceengineering.com/pages/documentation
-[thermistor mosquito_thermistor]
-temperature1 = 20
-resistance1 = 613400
-temperature2 = 190
-resistance2 = 4509
-temperature3 = 260
-resistance3 = 1359
 
 ### To tune extruder step_distance:
 ## mark 120mm from extruder entrance
@@ -262,17 +236,21 @@ enable_pin: !P2.12
 nozzle_diameter: 0.400
 filament_diameter: 1.75
 heater_pin: P2.7
-sensor_type: mosquito_thermistor
+sensor_type: ATC Semitec 104GT-2
 sensor_pin: P0.24
+control: pid
+pid_Kp: 16.8
+pid_Ki: 0.91
+pid_Kd: 78.46
 min_temp: 0
-max_temp: 270
-step_distance: 0.002409  # (BMG recommended value)
+max_temp: 245
+step_distance: 0.009775
 max_extrude_cross_section: 5
 
 ###   PRESSURE ADVANCE CONFIG    ###
 ## PLA:
 # pressure_advance: 0.67     # Overture SpaceLight Gray 1.75mm PLA
-pressure_advance: 0.96     # Overture Blue 1.75mm PLA
+# pressure_advance: 0.96     # Overture Blue 1.75mm PLA
 # pressure_advance: 0.78     # Overture Space Gray 1.75mm PLA
 # pressure_advance: 0.9196   # Overture Black 1.75mm PLA
 # pressure_advance: 0.6376   # Overture White 1.75mm PLA
@@ -294,8 +272,8 @@ stealthchop_threshold: 10
 
 [heater_bed]
 heater_pin: P2.5
-sensor_type: ATC Semitec 104GT-2
-sensor_pin: P0.23
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: P0.25
 min_temp: 0
 max_temp: 130
 
@@ -307,7 +285,7 @@ pin: P2.3
 
 # hotend fan wired into the second extruder heater output marked 'HE1'
 [heater_fan e0_fan]
-pin: P2.4
+pin: P2.04
 heater: extruder
 heater_temp: 50.0
 fan_speed: 0.75
@@ -323,16 +301,39 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1768_0380000407083DAFA845665CC42000F5-i
 
 [printer]
 kinematics: cartesian
-max_velocity: 500
-max_accel: 4500
+max_velocity: 400
+max_accel: 1000
 #max_accel_to_decel: 400
-max_z_velocity: 30
+max_z_velocity: 25
 max_z_accel: 100
 # square_corner_velocity: 3
 
-######################################################################
-# no display...
-######################################################################
+########################################
+# EXP1 / EXP2 (display) pins
+########################################
+
+[board_pins]
+aliases:
+    # EXP1 header
+    EXP1_1=P1.30, EXP1_3=P1.18, EXP1_5=P1.20, EXP1_7=P1.22, EXP1_9=<GND>,
+    EXP1_2=P0.28, EXP1_4=P1.19, EXP1_6=P1.21, EXP1_8=P1.23, EXP1_10=<5V>,
+    # EXP2 header
+    EXP2_1=P0.17, EXP2_3=P3.26, EXP2_5=P3.25, EXP2_7=P1.31, EXP2_9=<GND>,
+    EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
+    # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp0"
+
+
+[display]
+lcd_type: st7920
+cs_pin: EXP1_4
+sclk_pin: EXP1_5
+sid_pin: EXP1_3
+encoder_pins: ^EXP2_3, ^EXP2_5
+click_pin: ^!EXP1_2
+#kill_pin: ^!EXP2_8
+
+[output_pin beeper]
+pin: EXP1_1
 
 #####  NOTE: The above is all specific to my printer.  If you are
 #####  using this as a base for your own config, delete the entire
