--- a/printer.cfg
+++ b/printer.cfg
@@ -157,13 +157,13 @@ step_distance: 0.0124
 #endstop_pin: !P1.29 
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: -2.7
-#position_min: -13
+position_min: -2.7
 position_max: 187
 homing_speed: 70
 homing_retract_dist: 0
 
 [tmc2209 stepper_x]
-uart_pin: P1.17
+uart_pin: P1.10
 diag_pin: P1.29
 microsteps: 16
 interpolate: True
@@ -181,13 +181,13 @@ step_distance: 0.0124
 #endstop_pin: !P1.28 
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: -0.7
-#position_min: -0.7
+position_min: -0.7
 position_max: 215
 homing_speed: 70
 homing_retract_dist: 0
 
 [tmc2209 stepper_y]
-uart_pin: P1.15
+uart_pin: P1.9
 diag_pin: P1.28
 microsteps: 16
 interpolate: True
@@ -199,7 +199,7 @@ driver_SGTHRS: 125
 
 [stepper_z]
 step_pin: P0.22
-dir_pin: P2.11
+dir_pin: !P2.11
 enable_pin: !P0.21
 step_distance: .00125     
 endstop_pin: probe:z_virtual_endstop
@@ -208,7 +208,7 @@ position_max: 180
 homing_speed: 30
  
 [tmc2209 stepper_z]
-uart_pin: P1.10
+uart_pin: P1.8
 microsteps: 32
 interpolate: True
 run_current: 1.27
@@ -219,7 +219,7 @@ stealthchop_threshold: 60
 [safe_z_home]
 home_xy_position: 100,100
 speed: 700
-z_hop: 10
+z_hop: 5
 z_hop_speed: 100
 
 ### To tune extruder step_distance:
@@ -234,7 +234,7 @@ step_pin: P2.13
 dir_pin: !P0.11
 enable_pin: !P2.12
 nozzle_diameter: 0.400
-filament_diameter: 1.75
+filament_diameter: 1.750
 heater_pin: P2.7
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: P0.24
@@ -261,14 +261,14 @@ max_extrude_cross_section: 5
 # pressure_advance: 0.6888   # Overture Blue 1.75mm PETG
 # pressure_advance: 0.6212     # Overture Red 1.75mm PETG
 
-[tmc2209 extruder]
-uart_pin: P1.8
-microsteps: 16
-interpolate: False
-run_current: 1.07
-hold_current: 0.869
+#[tmc2209 extruder]
+#uart_pin: P1.8
+#microsteps: 16
+#interpolate: False
+#run_current: 1.07
+#hold_current: 0.869
 # stealthchop_threshold: 183 # 275 RPM
-stealthchop_threshold: 10
+#stealthchop_threshold: 10
 
 [heater_bed]
 heater_pin: P2.5
@@ -285,16 +285,16 @@ pin: P2.3
 
 # hotend fan wired into the second extruder heater output marked 'HE1'
 [heater_fan e0_fan]
-pin: P2.04
+pin: P2.4
 heater: extruder
 heater_temp: 50.0
-fan_speed: 0.75
+fan_speed: 1
 
 [filament_switch_sensor filament]
 pause_on_runout: False
 runout_gcode: PAUSE_MACRO
 pause_delay: 1 
-switch_pin: ^!P1.24
+switch_pin: ^!P1.26
 
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_lpc1768_1E0318184F245053013B534C030000F5-if00
@@ -322,7 +322,6 @@ aliases:
     EXP2_2=P0.15, EXP2_4=P0.16, EXP2_6=P0.18, EXP2_8=<RST>, EXP2_10=<NC>
     # Pins EXP2_1, EXP2_6, EXP2_2 are also MISO, MOSI, SCK of bus "ssp0"
 
-
 [display]
 lcd_type: st7920
 cs_pin: EXP1_4
@@ -334,6 +333,8 @@ click_pin: ^!EXP1_2
 
 [output_pin beeper]
 pin: EXP1_1
+
+
 
 #####  NOTE: The above is all specific to my printer.  If you are
 #####  using this as a base for your own config, delete the entire
