--- a/printer.cfg
+++ b/printer.cfg
@@ -7,31 +7,35 @@ gcode:
     M107            ; turn fan off
     ; G29           ; bed mesh levelling
     BED_MESH_PROFILE LOAD=cr10s
-    G28             ; move to origin
-    ; PRIME_LINE
+    G28             ; home all axes
+	G0 X2 Y2 Z15 F5000    ; move near origin for preheat
+    PRIME_LINE
 
 # prime the nozzle 
 [gcode_macro PRIME_LINE]
 gcode: 
     SAVE_GCODE_STATE NAME=PRIME_LINE_state
-    G91                                 ; relative positioning
-    G92 E0                              ; reset extruder
-    G1 Z2.0 F3000                       ; move Z Axis up
-    G1 X20 Y30 Z0.28 F5000.0            ; move to start position
-    G1 X20 Y200.0 Z0.28 F1500.0 E15     ; draw the first line
-    G1 X22 Y200.0 Z0.28 F5000.0         ; move to side a little
-    G1 X22 Y50 Z0.28 F1500.0 E30        ; draw the second line
-    G92 E0                              ; reset Extruder
-    G1 Z2.0 F3000                       ; move Z Axis up
+    M117 Clean			         ; Indicate nozzle clean in progress on LCD
+    ;M109 S210	                 ; Uncomment to set your own temp [run warmer to clean out nozzle]
+    G0 X1 Y0 Z0.15 F9000         ; Move in 1mm from edge and up [z] 0.15mm
+    G92 E0                       ; Set extruder to [0] zero
+    G1 Y150 E40 F500             ; Extrude 100mm filiment along Y axis 190mm long to prime and clean the nozzle
+    ;G0 Y150 F500
+    G92 E0                       ; Reset extruder to [0] zero end of cleaning run
+    G1 E-1 F500                  ; Retract filiment by 3 mm to reduce string effect
+    G1 X3 Y170 Z15 F9000      	 ; Move over and rise to safe Z height
+    G1 X3 Y0 Z15 F9000		     ; Move back to front of bed at safe Z height to shear strings
+    ;G1 E1 F500                ; Uncomment if you believe exruder will be reset
     RESTORE_GCODE_STATE NAME=PRIME_LINE_state
+    M117 Printing...
 
 [gcode_macro END_PRINT]
 gcode:
     G91             ; relative positioning
     G1 Z10          ; move Z Axis up
-    G1 E-5 F300    ; retract filament
+    G1 E-1 F300     ; retract filament
     G90             ; absolute positioning
-    G1 X0 Y300      ; present print
+    G1 X2 Y2        ; present print
     M107            ; turn fan off
     M104 S0         ; turn-off hotend
     M140 S0         ; turn-off heat bed
@@ -60,9 +64,9 @@ gcode:
     RESPOND TYPE=command MSG=action:resumed
 
 [gcode_macro PARK_MACRO]
-default_parameter_X: 20
-default_parameter_Y: 280
-default_parameter_Z: 100
+default_parameter_X: 100
+default_parameter_Y: 210
+default_parameter_Z: 80
 gcode:
     SAVE_GCODE_STATE NAME=PARK_MACRO_state
     G91                     ; relative positioning
@@ -99,11 +103,6 @@ gcode:
     G1 E45.0 F2500      ; extrude a littel more
     RESTORE_GCODE_STATE name=LOAD_FILAMENT
 
-# z-tilt-adjust
-[gcode_macro Z_TILT_MACRO]
-gcode:
-    G28                 ; move to origin
-    Z_TILT_ADJUST
 
 # probe-calibrate
 [gcode_macro PROBE_CALIBRATE_MACRO]
@@ -132,8 +131,8 @@ default_type: echo
 [bed_mesh]
 speed: 100
 horizontal_move_z: 8
-mesh_min: 5,5
-mesh_max: 180,210
+mesh_min: 40,5
+mesh_max: 200,210
 probe_count: 5
 algorithm: bicubic
 
@@ -147,18 +146,23 @@ control_pin: P2.0
 x_offset: 38
 y_offset: 0
 z_offset: 0.65
+#speed: 2
+#lift_speed: 2
+samples: 3
+sample_retract_dist: 4.0
 stow_on_each_sample: True
+pin_up_touch_mode_reports_triggered: False
 
 [stepper_x]
 step_pin: P2.2
-dir_pin: P2.6
+dir_pin: !P2.6
 enable_pin: !P2.1
-step_distance: 0.0124     
+step_distance: 0.012359909     
 #endstop_pin: !P1.29 
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 position_endstop: -2.7
 position_min: -2.7
-position_max: 187
+position_max: 202
 homing_speed: 70
 homing_retract_dist: 0
 
@@ -170,14 +174,14 @@ interpolate: True
 run_current: 1.27
 hold_current: 0.9
 # stealthchop_threshold: 183 # 275 RPM
-stealthchop_threshold: 60
+stealthchop_threshold: 110
 driver_SGTHRS: 125
 
 [stepper_y]
 step_pin: P0.19
-dir_pin: P0.20
+dir_pin: !P0.20
 enable_pin: !P2.8
-step_distance: 0.0124     
+step_distance: 0.01237278     
 #endstop_pin: !P1.28 
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_endstop: -0.7
@@ -194,18 +198,18 @@ interpolate: True
 run_current: 1.27
 hold_current: 0.9
 # stealthchop_threshold: 183 # 275 RPM
-stealthchop_threshold: 60
+stealthchop_threshold: 110
 driver_SGTHRS: 125
 
 [stepper_z]
 step_pin: P0.22
-dir_pin: !P2.11
+dir_pin: P2.11
 enable_pin: !P0.21
-step_distance: .00125     
+step_distance: 0.00122  
 endstop_pin: probe:z_virtual_endstop
 position_min: -3
 position_max: 180
-homing_speed: 30
+homing_speed: 10
  
 [tmc2209 stepper_z]
 uart_pin: P1.8
@@ -217,10 +221,10 @@ hold_current: 0.9
 stealthchop_threshold: 60
 
 [safe_z_home]
-home_xy_position: 100,100
+home_xy_position: 70,100
 speed: 700
-z_hop: 5
-z_hop_speed: 100
+z_hop: 10
+z_hop_speed: 50
 
 ### To tune extruder step_distance:
 ## mark 120mm from extruder entrance
@@ -231,7 +235,7 @@ z_hop_speed: 100
 [extruder]
 max_extrude_only_distance: 100.0
 step_pin: P2.13
-dir_pin: !P0.11
+dir_pin: P0.11
 enable_pin: !P2.12
 nozzle_diameter: 0.400
 filament_diameter: 1.750
@@ -239,9 +243,9 @@ heater_pin: P2.7
 sensor_type: ATC Semitec 104GT-2
 sensor_pin: P0.24
 control: pid
-pid_Kp: 16.8
-pid_Ki: 0.91
-pid_Kd: 78.46
+pid_Kp: 25.915
+pid_Ki: 1.208
+pid_Kd: 138.967
 min_temp: 0
 max_temp: 245
 step_distance: 0.009775
@@ -256,7 +260,8 @@ max_extrude_cross_section: 5
 # pressure_advance: 0.6376   # Overture White 1.75mm PLA
 # pressure_advance: 0.86     # Overture Red 1.75mm PLA
 ## PLA+
-# pressure_advance: 0.5448   # Overture Light Gray 1.75mm PLA+
+# pressure_advance: 0.09265   # Inland Brown 1.75mm PLA+
+pressure_advance: 0.097     # Inland Red 1.75mm PLA+
 ## PETG
 # pressure_advance: 0.6888   # Overture Blue 1.75mm PETG
 # pressure_advance: 0.6212     # Overture Red 1.75mm PETG
@@ -274,6 +279,10 @@ max_extrude_cross_section: 5
 heater_pin: P2.5
 sensor_type: EPCOS 100K B57560G104F
 sensor_pin: P0.25
+control: pid
+pid_Kp: 56.34
+pid_Ki: 1.700
+pid_Kd: 466.918
 min_temp: 0
 max_temp: 130
 
@@ -348,51 +357,43 @@ pin: EXP1_1
 #*# z_offset = 1.350
 #*#
 #*# [extruder]
-#*# control = pid
-#*# pid_kp = 35.289
-#*# pid_ki = 2.768
-#*# pid_kd = 112.482
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.017500, -0.065000, -0.110000, -0.147500, -0.112500
-#*# 	  0.035000, -0.025000, -0.060000, -0.100000, -0.092500
-#*# 	  0.020000, -0.032500, -0.085000, -0.142500, -0.162500
-#*# 	  -0.040000, -0.062500, -0.117500, -0.205000, -0.270000
-#*# 	  -0.182500, -0.185000, -0.255000, -0.380000, -0.495000
+#*# 	  -0.066693, -0.000000, -0.017080, -0.029687, -0.063440
+#*# 	  0.016267, 0.008540, 0.016267, -0.001627, -0.023587
+#*# 	  0.069133, 0.075233, 0.053273, 0.037820, 0.017893
+#*# 	  0.133387, 0.150467, 0.139080, 0.108987, 0.091500
+#*# 	  0.156160, 0.181373, 0.192760, 0.179747, 0.149653
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 29.9999
-#*# max_x = 269.998800001
-#*# min_y = 30.0001
-#*# max_y = 279.999600001
+#*# min_x = 39.995780682
+#*# max_x = 199.994802687
+#*# min_y = 5.00179516
+#*# max_y = 209.9940142
 #*#
 #*# [bed_mesh cr10s]
 #*# version = 1
 #*# points =
-#*# 	  -0.017500, -0.065000, -0.110000, -0.147500, -0.112500
-#*# 	  0.035000, -0.025000, -0.060000, -0.100000, -0.092500
-#*# 	  0.020000, -0.032500, -0.085000, -0.142500, -0.162500
-#*# 	  -0.040000, -0.062500, -0.117500, -0.205000, -0.270000
-#*# 	  -0.182500, -0.185000, -0.255000, -0.380000, -0.495000
+#*# 	  -0.066693, -0.000000, -0.017080, -0.029687, -0.063440
+#*# 	  0.016267, 0.008540, 0.016267, -0.001627, -0.023587
+#*# 	  0.069133, 0.075233, 0.053273, 0.037820, 0.017893
+#*# 	  0.133387, 0.150467, 0.139080, 0.108987, 0.091500
+#*# 	  0.156160, 0.181373, 0.192760, 0.179747, 0.149653
 #*# x_count = 5
 #*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
-#*# min_x = 29.9999
-#*# max_x = 269.998800001
-#*# min_y = 30.0001
-#*# max_y = 279.999600001
+#*# min_x = 39.995780682
+#*# max_x = 199.994802687
+#*# min_y = 5.00179516
+#*# max_y = 209.9940142
 #*#
 #*# [heater_bed]
-#*# control = pid
-#*# pid_kp = 53.561
-#*# pid_ki = 0.486
-#*# pid_kd = 1474.275
